# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjedai"
version = "0.1.5"
description = "An open-source library that builds powerful end-to-end Entity Resolution workflows."
readme = "README.md"
authors = [
    { name = "Konstantinos Nikoletos", email = "nikoletos.kon@gmail.com" },
    { name = "George Papadakis", email = "gpapadis84@gmail.com" },
    { name = "Jakub Maciejewski", email = "jacobb.maciejewski@gmail.com"},
    { name = "Manolis Koubarakis", email = "koubarak@di.uoa.gr"}
]
license = {text = "Apache Software License 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: iOS",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["deduplication", "entity-resolution", "link-discovery"]
requires-python = ">=3.8"
dependencies = [
    "gensim >= 4.2.0",
    "matplotlib >= 3.1.3",
    "matplotlib-inline >= 0.1.3",
    "networkx >= 2.3",
    "nltk >= 3.7",
    "numpy >= 1.21",
    "pandas >= 0.25.3",
    "pandas-profiling >= 3.2",
    "pandocfilters >= 1.5",
    "PyYAML >= 6.0",
    "rdflib >= 6.1.1",
    "rdfpandas >= 1.1.5",
    "regex >= 2022.6.2",
    "scipy >= 1.7",
    "seaborn >= 0.11",
    "strsim >= 0.0.3",
    "strsimpy >= 0.2.1",
    "tqdm >= 4.64",
    "transformers >= 4.21",
    "sentence-transformers >= 2.2",
    "faiss-cpu >= 1.7",
    "optuna >= 3.0",
    'tomli; python_version < "3.11"',
    "py-stringmatching >= 0.4",
    "valentine>=0.1; python_version > '3.7'",
    "ordered-set >= 4.0",
    "plotly >= 5.16.0",
    "shapely >= 2.0",
    'scann ; platform_system == "Linux"',
    'falconn ; platform_system == "Linux"'
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
"Homepage" = "http://pyjedai.rtfd.io"
"Documentation" = "http://pyjedai.rtfd.io"
"Bug Tracker" = "https://github.com/AI-team-UoA/pyJedAI/issues"
"Source code" = "https://github.com/AI-team-UoA/pyJedAI/tree/main/pyjedai"
