# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjedai"
version = "0.2.7"
description = "An open-source library that builds powerful end-to-end Entity Resolution workflows."
readme = "README.md"
authors = [
    { name = "Lefteris Stetsikas", email = "skantzoxoiros45@gmail.com" },
    { name = "Konstantinos Nikoletos", email = "nikoletos.kon@gmail.com" },
    { name = "George Papadakis", email = "gpapadis84@gmail.com" },
    { name = "Jakub Maciejewski", email = "jacobb.maciejewski@gmail.com"},
    { name = "Manolis Koubarakis", email = "koubarak@di.uoa.gr"}
]
license = {text = "Apache Software License 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: iOS",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["deduplication", "entity-resolution", "link-discovery"]
requires-python = ">=3.9"
dependencies = [
    "gensim",
    "matplotlib",
    "networkx",
    "nltk",
    "numpy >= 1.7.0,<2.0",
    "pandas",
    "scipy==1.12",
    "seaborn",
    "tqdm",
    "transformers",
    "sentence-transformers",
    "faiss-cpu",
    "py-stringmatching",
    "valentine; python_version > '3.7'",
    "ordered-set",
    "shapely"
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
"Homepage" = "http://pyjedai.rtfd.io"
"Documentation" = "http://pyjedai.rtfd.io"
"Bug Tracker" = "https://github.com/AI-team-UoA/pyJedAI/issues"
"Source code" = "https://github.com/AI-team-UoA/pyJedAI/tree/main/pyjedai"

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
]
